public interface IWeapon
{
    public int attack { get; }
    public void Use();
}